Api key + deleting fridges
